--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "scripts": {
         "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "Illuminate\\\\Foundation\\\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
@@ -48,7 +48,7 @@
             "@php artisan migrate --graceful --ansi"
         ],
         "dev": [
-            "Composer\\Config::disableProcessTimeout",
+            "Composer\\\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite --kill-others"
         ],
         "test": [
@@ -65,6 +65,8 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
+        "platform-check": false,
+        "ignore-platform-reqs": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
